<resources>
    <string name="app_name">Turistas</string>
    <string name="Mažeikiai">Mažeikiai fragment</string>
    <string name="title_activity_nlaisves30">nlaisves30</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="pakalnes5nr">(8–656) 74580</string>
    <string name="airovitosnr">(8–684) 47299</string>
    <string name="taudazasvydis1">+37068999933</string>
    <string name="taudazasvydis2">+37065627027</string>
    <string name="UzsukiteSiauliuose">Užsukite Šiauliuose</string>
    <string name="S_Baras">S Baras</string>
    <string name="Skonio_studija">Skonio studija</string>
    <string name="Senasis_sodzius">Senasis sodzius</string>
    <string name="Black_Bar">Black Bar</string>
    <string name="Arkos">Arkos</string>
    <string name="DonVino">DonVino</string>
    <string name="Juone_pastuoge">Juone pastuoge</string>
    <string name="My_thai">My thai</string>
    <string name="Can_Can">Can Can</string>
    <string name="Blic_Bar">Blic Bar</string>
    <string name="Google_Siauliu_Restoranai"><![CDATA[https://www.google.lt/search?rlz=1C1CHBF_enLT747LT747&ei=dMT8WZClDYr36AT864i4BQ&q=Restoranai+%C5%A0iauliuose&oq=Restoranai+%C5%A0iauliuose&gs_l=psy-ab.3..0j0i22i30k1l5.356008.363880.0.364007.16.14.2.0.0.0.221.1055.11j1j1.13.0....0...1.1.64.psy-ab..1.15.1064...35i39k1j0i20i263k1j0i22i10i30k1.0.kZMrfP2Qb7Q]]></string>
    <string name="kaip_naudotis">Kaip naudotis?</string>
    <string name="naudotos_programos">Naudotos programos</string>
    <string name="aerodromas">Aerodromas</string>
    <string name="kontaktai">Kontaktai</string>
    <string name="TelsiuAerodromas">Tel. nr. (8–656) 74580</string>
    <string name="TelsiuAerodromasAdresas">Adresas: Pakalnės g. 5, Telšiai 87122</string>
    <string name="phonebutton">PhoneButton</string>
    <string name="mapsbutton">MapsButton</string>
    <string name="MoreButton">MoreButton</string>
    <string name="airovita">Airovita</string>
    <string name="AirovitaDescription">Kretingoje įsikūrusiuose nakvynės namuose „Airovita kambariai nakvynei“ galėsite nemokamai naudotis belaidžiu internetu ir privačia automobilių stovėjimo aikštele.
&#xA; &#xA;Visuose numeriuose yra plokščiaekraniai televizoriai, o kai kuriuose – poilsiui skirtos svetainės erdvės ir terasos arba balkonai. Atskiruose vonios kambariuose įrengtos vonios arba dušai. Svečiams suteikiami plaukų džiovintuvai bei nemokamų higienos reikmenų rinkiniai.
&#xA; &#xA;Apgyvendinimo įstaigoje yra bendras poilsio salonas.&#xA;&#xA; Atstumai:
&#xA;Palanga - 11 km., Klaipėda – 22 km., Palangos tarptautinis oro uostas - 12 km. </string>
    <string name="AirovitaNr">Tel. nr. (8–684) 47299</string>
    <string name="AirovitaAdress">Adresas: J. Basanavičiaus g. 93, Kretinga 97125</string>
    <string name="ant_kalnoTitle">Ant kalno</string>
    <string name="AntKalnoDescription">Žemaitijos sostinėje - Telšiuose įsikūrusi kavinė „Ant kalno“ laukia Jūsų! Čia maloniai ir linksmai praleisti laiką jaukioje aplinkoje, paskanausite gardžių patiekalų ir pasilepinsite desertais. Kavinė siūlo platų įvairių gėrimų, užkandžių, salotų, karštų patiekalų bei desertu asortimentą.Nežinote ko paskanauti? Visada Jums pagelbės aptarnaujantis personalas.</string>
    <string name="AntKalnoTelNR">Tel. nr. (8–444) 76016</string>
    <string name="AntKalnoAdress">Kalno g. 18, Telšiai 87133</string>
    <string name="NameOfCreator">Justas Glodenis</string>
    <string name="NaudotosProgramos">Naudotos programos:</string>
    <string name="PhotoShop">Adobe Photoshop</string>
    <string name="android_studio">Android Studio</string>
    <string name="Browser">Internetas</string>
    <string name="MazeikiaiArkosTitle">Arkos</string>
    <string name="MazeikiaiArkosDescription">Svečių numeriuose rasite palydovinius kanalus rodančius televizorius, kavos virimo aparatus, vonias arba dušus, nemokamus higienos reikmenis ir rašomuosius stalus. Visuose numeriuose yra vonios kambariai su plaukų džiovintuvais, o kai kuriuose – svetainės zonos. Juose taip pat rasite drabužių spintas ir virdulius. Visada rasite karštus ir skanius dienos pietus. Taip pat yra organizuojami banketai, furšetai, vestuvės, krikštynos ir jubiliejų šventės. Savaitgaliais jūsų laukia visada linksmi ir smagūs muzikiniai vakarai.</string>
    <string name="MazeikiaiArkosTelNr">Tel. nr. 8–646-02057</string>
    <string name="MazeikiaiArkosAddres">Adresas: Gamyklos gatvė 41, Mažeikiai</string>
    <string name="SkuodiskioUzeigaTitle">Skuodiškio užeiga</string>
    <string name="SkuodiskioUzeigaDescription">Vos už 80 metrų nuo Skuodo autobusų stoties įsikūrusiuose nakvynės namuose „Aroma Skuodiškio užeiga“ nuomojami dviračiai ir auga sodas, kuriame pastatytos kepsninės.
&#xA; &#xA;Klasikinio stiliaus „Aroma“ numeriuose yra kabelinius kanalus rodantys plokščiaekraniai televizoriai, elektriniai virduliai ir vonios kambariai, kuriuose rasite rankšluosčius bei dušus arba vonias. Nakvynės namuose veikia nemokamas belaidis internetas.
&#xA; &#xA;Pageidaujantiems svečiams už papildomą mokestį teikiamos pervežimo paslaugos, o registratūra dirba visą parą. Viešnagės metu galėsite atsipalaiduoti sode ir apsilankyti restorane, kuriame ruošiami lietuviški bei europietiški valgiai. Automobilių stovėjimo aikštelė – nemokama. </string>
    <string name="SkuodiskioUzeigaTelNr">Tel. nr. (8-655) 58890</string>
    <string name="SkuodiskioUzeigaAddres">Adresas: Vilniaus g. 21, Skuodas 98111</string>
    <string name="naktiniai_klubai">Naktiniai Klubai</string>
    <string name="bildukas">Bildukas</string>
    <string name="old_house">Old House</string>
    <string name="OldHouseAddres">Adresas: Laisvės g. 5, Mažeikiai 89213</string>
    <string name="OldHouseTelNr">Tel. nr. (8-644) 00080</string>
    <string name="phoneimage">PhoneImage</string>
    <string name="mapimage">MapImage</string>
    <string name="BildukasTelNr">Tel. nr. (8-443) 91710</string>
    <string name="BilduaksAdresas">Mažeikiai 89233</string>
    <string name="PegasasTitle">Pegasas</string>
    <string name="PegasasTelNr">Tel. nr. (8-443) 90180</string>
    <string name="PegasasAdress">Adresas: Žemaitijos g. 20, Mažeikiai 89151</string>
    <string name="BlackBarTitle">Black Bar</string>
    <string name="BlackBarDescription">„Black Bar“– neįpareigojančios jaukios aplinkos gastropub‘as, įsikūręs viename iš seniausių ir turtingą istoriją turinčių Šiaulių pastatų. Čia puikus, su meile gaminamas maistas bei įvairūs gėrimai laukia gerai nusiteikusių, skonį ir kokybę vertinančių bendraminčių. „Black Bar“ turi ko pasiūlyti gero alaus mėgėjams, vyno gurmanams bei stipriųjų gėrimų vertintojams.</string>
    <string name="BlackBarTelNR">Tel. nr. (8-642) 44445</string>
    <string name="BlackBarAddres">Adresas: Vasario 16-osios g. 48 Šiauliai</string>
    <string name="telpic">TelPic</string>
    <string name="mappic">MapPic</string>
    <string name="BlicBar">Blic Bar</string>
    <string name="BlicBarDescription">„Blic” („Blicbaris”) - tai baras Šiauliuose, kuriame galite mėgautis gyva muzika kartu su bokalu skanaus alaus, papietauti, paragauti firminės baro sriubos „Blic”.</string>
    <string name="BlicBarTelNR">Tel. nr. (8-604) 90082</string>
    <string name="BlicBarAddres">Adresas: Tilžės g. 155, Šiauliai 76297</string>
    <string name="Boulingas">Boulingas</string>
    <string name="MazeikiuBoulingasTelNR">Tel. nr. 8 616 92999</string>
    <string name="MazeikiuBoulingasAddres">Adresas: Gamyklos g. 1, Mažeikiai</string>
    <string name="CanCanPizzaSiauliaiTitle">Can Can Pizza</string>
    <string name="CanCanPizzaSiauliaiDescription">Šiuolaikiška ir moderni aplinka leis pasijusti taip, lyg pietautum Manheteno centre, o malonus ir šiltas aptarnavimas vilios sugrįžti dar ne kartą. „CAN CAN PIZZA“ ateitį kuria šiandien, todėl mes esame viena populiariausių picerijų visoje Lietuvoje.</string>
    <string name="CanCanPizzaSiauliaiTelNr">Tel. nr. (8-659) 78570</string>
    <string name="CanCanPizzaSiauliaiAddres">Adresas: Tilžės g. 225, Šiauliai 76200</string>
    <string name="CanCanPizzaSiauliaiTelNr2">Tel. nr. (8-659) 04150</string>
    <string name="CanCanPizzaSiauliaiAddres2">Adresas: Aido g. 8, Šiauliai 78322</string>
    <string name="CanCanMazeikiaiDescription">Šiuolaikiška ir moderni aplinka leis pasijusti taip, lyg pietautum Manheteno centre, o malonus ir šiltas aptarnavimas vilios sugrįžti dar ne kartą. „CAN CAN PIZZA“ ateitį kuria šiandien, todėl yra viena populiariausių picerijų visoje Lietuvoje.</string>
    <string name="CanCanPicaMazeikiaiTelNr">Tel. nr. (8-659) 13265</string>
    <string name="CanCanPicaMazeikiaiAddres">Adresas: Žemaitijos g. 20b-5, Mažeikiai 89151</string>
    <string name="JustasFacebook">https://www.facebook.com/Justas.Glo</string>
    <string name="CharlieMazeikiaiTitle">Charlie pizza</string>
    <string name="CharlieMazeikiaiDescription">Charlie pizza - visiems mėgstantiems picas ir lengvus užkandžius, dievinantiems modernumą, bet kartu grįžtantiems prie jaukios ir šiuolaikiškos atmosferos.</string>
    <string name="CharlieMazeikiaiTelNR">Tel. nr. (8-610) 01809</string>
    <string name="CharlieMazeikiaiAddres">Adresas: Laisvės g. 56, Mažeikiai 89223</string>
    <string name="DonVinoTitle">Don Vino</string>
    <string name="DonVinoDescription">Erdviame „Don Vino“ restorane galėsite paragauti ne tik įvairių vyno rūšių, bet ir įmantrių, gurmaniškų europietiškos virtuvės patiekalų.Restorano virtuvės meistrai taip pat siūlo ir dienos pietų meniu, kuris atnaujinamas kasdien.Jūsų laukia su meile pagaminti gurmaniški patiekalai, kruopščiai atrinktas vyno meniu, jauki atmosfera, interjeras, papuoštas ryškiomis gėlėmis padabintais šviestuvais ir malonus aptarnavimas!</string>
    <string name="Dazasvydis">Dažasvydis</string>
    <string name="DazasvydisKretingaTelNR">Tel. nr.(8-644) 00072</string>
    <string name="DazasvydisKretingaAddres">Adresas: Mėguvos g. 3, Kretinga</string>
    <string name="baseinai">Baseinai</string>
    <string name="MSportoMokykla">Mažeikiu sporto mokykla</string>
    <string name="MsportoMokyklaTelNr">Tel. nr. (8-443) 90060</string>
    <string name="MsportoMokyklaAddres">Adresas: Pavenčių g. 15, Mažeikiai 89184</string>
    <string name="SpaSaurida">SPA Saurida</string>
    <string name="SpaSauridaTelNr">Tel. nr. (8-607) 86184</string>
    <string name="SpaSauridaAddres">Adresas: Naftininkų g. 9, Mažeikiai 89239</string>
    <string name="PusynoNamaiTitle">Pušyno namai</string>
    <string name="PusynoNamaiTelNr">Tel. nr. +370 615 99 404</string>
    <string name="PusynoNamaiAddres">Adresas: Sedos g. 3, Mažeikiai 89233</string>
    <string name="BaseinasPortoTitle">Porto</string>
    <string name="BaseinasPortoTelNr">Tel. nr. +370 674 22255</string>
    <string name="BaseinasPortoAddres">Adresas: Pramogų g. 2, Truikių k., Plungės r.</string>
    <string name="PlungesPirtisTitle">Plungės miesto pirtis</string>
    <string name="PlungesPirtisTelNr">Tel. nr. +370 655 77666</string>
    <string name="PlungesPirtisAddres">Adresas: I. Končiaus g. 3, Plungė</string>
    <string name="kubilasPlungeTitle">Kubilas</string>
    <string name="kubilasPlungeTelNr">Tel. nr. +370 620 26033</string>
    <string name="kubilasPlungeAddres">Adresas: Mardosų k., Nausodžio sen., Plungės r.</string>
    <string name="SGKlinikaTitle">SG Klinika</string>
    <string name="SGKlinikaTelNr">Tel. nr. +370 448 55098, +370 615 34 806</string>
    <string name="SGKlinikaAddres">Adresas: Telšių g. 13, Plungė</string>
    <string name="SiliuSveciuNamaiTitle">Šilų svečių namai</string>
    <string name="SiliuSveciuNamaiTelNr">Tel. nr. +370 448 71181, +370 682 67 065</string>
    <string name="SiliuSveciuNamaiAddres">Adresas: Rietavo g. 16, Plungė</string>
    <string name="PlungeBaseinasTitle">Baseinas</string>
    <string name="PlungeBaseinasTelNR">Tel. nr. +370 698 10312, +370 614 74284</string>
    <string name="PlungeBaseinasAddres">Adresas: Plokštinės g. 20, Paplatelės km., Plungės r.</string>
</resources>