<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        style="@style/matchnmatch"
        android:orientation="vertical"
        tools:context="com.example.android.turistas.airovita">

        <TextView
            style="@style/InfoTitle"
            android:text="@string/Black_Bar"
            />

        <View
            style="@style/InfoSeperator" />

        <TextView
            style="@style/InfoDescription"
            android:text="@string/BlackBarDescription"
            />

        <View
            style="@style/InfoSeperator"/>

        <TextView
            style="@style/InfoKontaktaiGrafa"
            android:text="@string/kontaktai"
            />

        <LinearLayout
            style="@style/matchnwrap"
            android:orientation="horizontal">

            <TextView
                android:text="@string/BlackBarTelNR"
                style="@style/InfoTelNr" />

            <TextView
                android:text="@string/BlackBarAddres"
                style="@style/InfoKontaktai" />
        </LinearLayout>

        <View
            style="@style/InfoSeperator"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/telefono"
                style="@style/InfoTelPic"
                android:contentDescription="@string/telpic" />

            <View
                style="@style/InfoVerticalSkyriklis" />

            <ImageView
                android:id="@+id/adreso"
                style="@style/InfoMapPic"
                android:contentDescription="@string/mappic" />
        </LinearLayout>

        <View
            style="@style/InfoSeperator" />

        <FrameLayout
            style="@style/matchnwrap"
            android:foreground="?attr/selectableItemBackground">

            <ImageView
                android:id="@+id/google"
                style="@style/InfoMoreButton"
                android:contentDescription="@string/MoreButton" />
        </FrameLayout>
    </LinearLayout>
</ScrollView>