<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        style="@style/matchnmatch"
        android:orientation="vertical"
        tools:context="com.example.android.turistas.pplaukimas">

        <TextView
            style="@style/InfoTitle"
            android:text="@string/baseinai"
            />
        <View
            style="@style/InfoSeperator"/>

        <TextView
            style="@style/InfoTitle"
            android:text="@string/BaseinasPortoTitle"
            android:textSize="@dimen/contactstextsize"/>

        <TextView
            style="@style/InfoKontaktaiGrafa"
            android:text="@string/kontaktai"
            />

        <LinearLayout
            style="@style/matchnwrap"
            android:orientation="horizontal">

            <TextView
                android:text="@string/BaseinasPortoTelNr"
                style="@style/InfoTelNr" />

            <TextView
                android:text="@string/BaseinasPortoAddres"
                style="@style/InfoKontaktai" />
        </LinearLayout>

        <View
            style="@style/InfoSeperator"/>

        <LinearLayout
            style="@style/matchnwrap">

            <ImageView
                android:id="@+id/telefono"
               style="@style/InfoTelPic"
                android:contentDescription="@string/telpic" />

            <View
                style="@style/InfoVerticalSkyriklis" />

            <ImageView
                android:id="@+id/adreso"
               style="@style/InfoMapPic"
                android:contentDescription="@string/mappic" />
        </LinearLayout>

        <View
            style="@style/InfoSeperator"/>

        <TextView
            style="@style/InfoTitle"
            android:textSize="@dimen/contactstextsize"
            android:text="@string/PlungesPirtisTitle" />

        <TextView
            style="@style/InfoKontaktaiGrafa"
            android:text="@string/kontaktai"
            />

        <LinearLayout
            style="@style/matchnwrap"
            android:orientation="horizontal">

            <TextView
               style="@style/InfoTelNr"
                android:text="@string/PlungesPirtisTelNr" />

            <TextView
                android:text="@string/PlungesPirtisAddres"
               style="@style/InfoKontaktai" />
        </LinearLayout>

        <View
            style="@style/InfoSeperator"/>

        <LinearLayout
           style="@style/matchnwrap">

            <ImageView
                android:id="@+id/telefono1"
                style="@style/InfoTelPic" />

            <View
               style="@style/InfoVerticalSkyriklis" />

            <ImageView
                android:id="@+id/adreso1"
                style="@style/InfoMapPic" />
        </LinearLayout>

        <View
            style="@style/InfoSeperator"/>

        <TextView
            style="@style/InfoTitle"
            android:textSize="@dimen/contactstextsize"
            android:text="@string/kubilasPlungeTitle" />

        <TextView
            style="@style/InfoKontaktaiGrafa"
            android:text="@string/kontaktai"
            />

        <LinearLayout
           style="@style/matchnwrap"
            android:orientation="horizontal">

            <TextView
                style="@style/InfoTelNr"
                android:text="@string/kubilasPlungeTelNr"
                />

            <TextView
               style="@style/InfoKontaktai"
                android:text="@string/kubilasPlungeAddres"
                />
        </LinearLayout>

        <View
            style="@style/InfoSeperator"/>

        <LinearLayout
            style="@style/matchnwrap">

            <ImageView
                android:id="@+id/telefono2"
               style="@style/InfoTelPic" />

            <View
               style="@style/InfoVerticalSkyriklis" />

            <ImageView
                android:id="@+id/adreso2"
                style="@style/InfoMapPic" />
        </LinearLayout>
        <View
            style="@style/InfoSeperator"/>
        <TextView
           style="@style/InfoTitle"
            android:text="@string/SGKlinikaTitle"
            android:textSize="@dimen/contactstextsize" />

        <TextView
            style="@style/InfoKontaktaiGrafa"
            android:text="@string/kontaktai"
            />

        <LinearLayout
           style="@style/matchnwrap"
            android:orientation="horizontal">

            <TextView
               style="@style/InfoTelNr"
                android:text="@string/SGKlinikaTelNr"
                />

            <TextView
               style="@style/InfoKontaktai"
                android:text="@string/SGKlinikaAddres"
                />
        </LinearLayout>

        <View
            style="@style/InfoSeperator"/>

        <LinearLayout
           style="@style/matchnwrap">

            <ImageView
                android:id="@+id/telefono3"
               style="@style/InfoTelPic"/>

            <ImageView
                android:id="@+id/telefono4"
                style="@style/InfoTelPic" />

            <View
               style="@style/InfoVerticalSkyriklis" />

            <ImageView
                android:id="@+id/adreso3"
               style="@style/InfoMapPic" />
        </LinearLayout>

        <View
            style="@style/InfoSeperator"/>

        <TextView
            android:text="@string/SiliuSveciuNamaiTitle"
            style="@style/InfoTitle"
            android:textSize="@dimen/contactstextsize"  />

        <TextView
            style="@style/InfoKontaktaiGrafa"
            android:text="@string/kontaktai"
            />

        <LinearLayout
           style="@style/matchnwrap"
            android:orientation="horizontal">

            <TextView
                style="@style/InfoTelNr"
                android:text="@string/SiliuSveciuNamaiTelNr"
                />

            <TextView
              style="@style/InfoKontaktai"
                android:text="@string/SiliuSveciuNamaiAddres"
                 />
        </LinearLayout>

        <View
            style="@style/InfoSeperator"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/telefono6"
               style="@style/InfoTelPic"/>

            <ImageView
                android:id="@+id/telefono5"
                style="@style/InfoTelPic" />

            <View
               style="@style/InfoVerticalSkyriklis" />

            <ImageView
                android:id="@+id/adreso4"
               style="@style/InfoMapPic" />
        </LinearLayout>
        <View
            style="@style/InfoSeperator"/>

        <TextView
            style="@style/InfoTitle"
            android:textSize="@dimen/contactstextsize"
            android:text="@string/PlungeBaseinasTitle" />

        <TextView
            style="@style/InfoKontaktaiGrafa"
            android:text="@string/kontaktai"
            />

        <LinearLayout
           style="@style/matchnwrap">

            <TextView
                style="@style/InfoTelNr"
                android:text="@string/PlungeBaseinasTelNR" />

            <TextView
               style="@style/InfoKontaktai"
                android:text="@string/PlungeBaseinasAddres" />
        </LinearLayout>

        <View
            style="@style/InfoSeperator"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/telefono8"
               style="@style/InfoTelPic" />

            <ImageView
                android:id="@+id/telefono7"
                style="@style/InfoTelPic" />

            <View
               style="@style/InfoVerticalSkyriklis" />

            <ImageView
                android:id="@+id/adreso5"
                style="@style/InfoMapPic" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?attr/selectableItemBackground">

            <ImageView
                android:id="@+id/google"
                style="@style/InfoMoreButton" />
        </FrameLayout>
    </LinearLayout>
</ScrollView>