<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        tools:context="com.example.android.turistas.aerodromas"
        style="@style/matchnmatch">

        <TextView
            style="@style/InfoTitle"
            android:text="@string/Dazasvydis"
            />

        <View
            style="@style/InfoSeperator"/>

        <TextView
            style="@style/InfoKontaktaiGrafa"
            android:text="@string/kontaktai"
            />

        <LinearLayout
            style="@style/matchnwrap"
            android:orientation="horizontal">

            <TextView
                android:text="@string/DazasvydisKretingaTelNR"
                style="@style/InfoTelNr"/>

            <TextView
                style="@style/InfoKontaktai"
                android:text="@string/DazasvydisKretingaAddres"
                />
        </LinearLayout>

        <View
            style="@style/InfoSeperator" />

        <LinearLayout
            style="@style/matchnwrap">

            <ImageView
                style="@style/InfoTelPic"
                android:contentDescription="@string/phonebutton"
                android:id="@+id/telefono"/>

            <View
                style="@style/InfoVerticalSkyriklis" />

            <ImageView
                android:id="@+id/adreso"
                style="@style/InfoMapPic"
                android:contentDescription="@string/mapsbutton" />
        </LinearLayout>

        <FrameLayout
            style="@style/matchnwrap"
            android:foreground="?attr/selectableItemBackground">

            <ImageView
                style="@style/InfoMoreButton"
                android:id="@+id/google"
                android:contentDescription="@string/MoreButton" />
        </FrameLayout>
    </LinearLayout>
</ScrollView>