<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
       style="@style/matchnmatch"
        android:orientation="vertical"
        tools:context="com.example.android.turistas.can_can">

        <TextView
            android:text="@string/CanCanPizzaSiauliaiTitle"
           style="@style/InfoTitle" />

        <View
            style="@style/InfoSeperator"/>

        <TextView
            android:text="@string/CanCanPizzaSiauliaiDescription"
            style="@style/InfoDescription" />

        <View
            style="@style/InfoSeperator"/>

        <TextView
           style="@style/InfoKontaktaiGrafa"/>

        <LinearLayout
            style="@style/matchnwrap"
            android:orientation="horizontal">

            <TextView
                android:text="@string/CanCanPizzaSiauliaiTelNr"
               style="@style/InfoTelNr" />

            <TextView
                android:text="@string/CanCanPizzaSiauliaiAddres"
                style="@style/InfoKontaktai" />
        </LinearLayout>

        <View
            style="@style/InfoSeperator"/>

        <LinearLayout
            style="@style/matchnwrap">

            <ImageView
                android:id="@+id/telefono"
               style="@style/InfoTelPic"
                android:contentDescription="@string/telpic" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/skyriklis" />

            <ImageView
                android:id="@+id/adreso"
               style="@style/InfoMapPic"
                android:contentDescription="@string/mappic" />
        </LinearLayout>

        <View
           style="@style/InfoSeperator"/>

        <TextView
            style="@style/InfoKontaktaiGrafa" />

        <LinearLayout
            style="@style/matchnwrap"
            android:orientation="horizontal">

            <TextView
                android:text="@string/CanCanPizzaSiauliaiTelNr2"
                style="@style/InfoTelNr" />

            <TextView
                android:text="@string/CanCanPizzaSiauliaiAddres2"
               style="@style/InfoKontaktai" />
        </LinearLayout>

        <View
            style="@style/InfoSeperator"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/telefono2"
               style="@style/InfoTelPic" />

            <View
                style="@style/InfoVerticalSkyriklis"/>

            <ImageView
                android:id="@+id/adreso2"
                style="@style/InfoMapPic" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?attr/selectableItemBackground">

            <ImageView
                android:id="@+id/google"
                style="@style/InfoMoreButton" />
        </FrameLayout>
    </LinearLayout>
</ScrollView>