<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        style="@style/matchnmatch"
        android:orientation="vertical"
        tools:context="com.example.android.turistas.pklubai">

        <TextView
            style="@style/InfoTitle"
            android:text="@string/baseinai"
            />
        <View
            style="@style/InfoSeperator"/>
        <TextView
            style="@style/InfoTitle"
            android:text="@string/MSportoMokykla"
            android:textSize="@dimen/contactstextsize"
            />

        <TextView
            style="@style/InfoKontaktaiGrafa"
            android:text="@string/kontaktai"
            />

        <LinearLayout
            style="@style/matchnwrap"
            android:orientation="horizontal">

            <TextView
                android:text="@string/MsportoMokyklaTelNr"
                style="@style/InfoTelNr" />

            <TextView
                android:text="@string/MsportoMokyklaAddres"
                style="@style/InfoKontaktai" />
        </LinearLayout>

        <View
            style="@style/InfoSeperator"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/telefono"
                style="@style/InfoTelPic" />

            <View
                style="@style/InfoVerticalSkyriklis" />

            <ImageView
                android:id="@+id/adreso"
                style="@style/InfoMapPic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <View
                style="@style/InfoSeperator"/>

            <TextView
                style="@style/InfoTitle"
                android:text="@string/SpaSaurida"
                android:textSize="@dimen/contactstextsize"
                />

            <TextView
                style="@style/InfoKontaktaiGrafa"
                android:text="@string/kontaktai"
                />

            <LinearLayout
                style="@style/matchnwrap"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/SpaSauridaTelNr"
                    style="@style/InfoTelNr" />

                <TextView
                    android:text="@string/SpaSauridaAddres"
                    style="@style/InfoKontaktai" />
            </LinearLayout>

            <View
                style="@style/InfoSeperator"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/telefono1"
                    style="@style/InfoTelPic" />

                <View
                    style="@style/InfoVerticalSkyriklis" />

                <ImageView
                    android:id="@+id/adreso1"
                    style="@style/InfoMapPic" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
          style="@style/matchnwrap"
            android:orientation="vertical">
            <View
                style="@style/InfoSeperator"/>

            <TextView
                style="@style/InfoTitle"
                android:text="@string/PusynoNamaiTitle"
                android:textSize="@dimen/contactstextsize"
                />

            <TextView
                style="@style/InfoKontaktaiGrafa"
                android:text="@string/kontaktai"
                />

            <LinearLayout
                style="@style/matchnwrap"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/PusynoNamaiTelNr"
                    style="@style/InfoTelNr" />

                <TextView
                    android:text="@string/PusynoNamaiAddres"
                    style="@style/InfoKontaktai" />
            </LinearLayout>

            <View
                style="@style/InfoSeperator"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/telefono2"
                    style="@style/InfoTelPic" />

                <View
                    style="@style/InfoVerticalSkyriklis" />

                <ImageView
                    android:id="@+id/adreso2"
                    style="@style/InfoMapPic" />
            </LinearLayout>


        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?attr/selectableItemBackground">

            <ImageView
                android:id="@+id/google"
                style="@style/InfoMoreButton" />
        </FrameLayout>
    </LinearLayout>
</ScrollView>
